# llm_prompter

./: .pre-commit-config.yaml  config.json  hook-tiktoken.py  main.py  main.spec  pyproject.toml  readme.md  save_copy.py  test.py
promptbuilder/: __init__.py  cli.py  main.py
promptbuilder/config/: loader.py  paths.py  schema.py
promptbuilder/core/: context_assembler.py  fs_scanner.py  models.py  plugins.py  prompt_engine.py  token_counter.py
promptbuilder/plugins/: __init__.py  git_diff.py
promptbuilder/services/: async_utils.py  logging.py  theming.py
promptbuilder/ui/: application.py
promptbuilder/ui/widgets/: file_tree.py  project_tab.py  prompt_panel.py  text_edit.py
promptbuilder/ui/windows/: main_window.py
scripts/: build.bat  build.sh  freeze.spec
tests/core/: test_token_counter.py
